testdata/with_mr/listeners.yaml
resources:
- '@type': type.googleapis.com/envoy.config.listener.v3.Listener
  access_log:
  - filter:
      response_flag_filter:
        flags:
        - NR
    name: envoy.access_loggers.file
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
      log_format:
        json_format:
          authority: '%REQ(:AUTHORITY)%'
          bytes_received: '%BYTES_RECEIVED%'
          bytes_sent: '%BYTES_SENT%'
          connection_termination_details: '%CONNECTION_TERMINATION_DETAILS%'
          downstream_local_address: '%DOWNSTREAM_LOCAL_ADDRESS%'
          downstream_remote_address: '%DOWNSTREAM_REMOTE_ADDRESS%'
          duration: '%DURATION%'
          method: '%REQ(:METHOD)%'
          path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
          protocol: '%PROTOCOL%'
          request_id: '%REQ(X-REQUEST-ID)%'
          requested_server_name: '%REQUESTED_SERVER_NAME%'
          response_code: '%RESPONSE_CODE%'
          response_code_details: '%RESPONSE_CODE_DETAILS%'
          response_flags: '%RESPONSE_FLAGS%'
          route_name: '%ROUTE_NAME%'
          start_time: '%START_TIME%'
          upstream_cluster: '%UPSTREAM_CLUSTER%'
          upstream_host: '%UPSTREAM_HOST%'
          upstream_local_address: '%UPSTREAM_LOCAL_ADDRESS%'
          upstream_service_time: '%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%'
          upstream_transport_failure_reason: '%UPSTREAM_TRANSPORT_FAILURE_REASON%'
          user_agent: '%REQ(USER-AGENT)%'
          x_forwarded_for: '%REQ(X-FORWARDED-FOR)%'
      path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9889
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        access_log:
        - name: envoy.access_loggers.file
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
            log_format:
              json_format:
                authority: '%REQ(:AUTHORITY)%'
                bytes_received: '%BYTES_RECEIVED%'
                bytes_sent: '%BYTES_SENT%'
                connection_termination_details: '%CONNECTION_TERMINATION_DETAILS%'
                downstream_local_address: '%DOWNSTREAM_LOCAL_ADDRESS%'
                downstream_remote_address: '%DOWNSTREAM_REMOTE_ADDRESS%'
                duration: '%DURATION%'
                method: '%REQ(:METHOD)%'
                path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
                protocol: '%PROTOCOL%'
                request_id: '%REQ(X-REQUEST-ID)%'
                requested_server_name: '%REQUESTED_SERVER_NAME%'
                response_code: '%RESPONSE_CODE%'
                response_code_details: '%RESPONSE_CODE_DETAILS%'
                response_flags: '%RESPONSE_FLAGS%'
                route_name: '%ROUTE_NAME%'
                start_time: '%START_TIME%'
                upstream_cluster: '%UPSTREAM_CLUSTER%'
                upstream_host: '%UPSTREAM_HOST%'
                upstream_local_address: '%UPSTREAM_LOCAL_ADDRESS%'
                upstream_service_time: '%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%'
                upstream_transport_failure_reason: '%UPSTREAM_TRANSPORT_FAILURE_REASON%'
                user_agent: '%REQ(USER-AGENT)%'
                x_forwarded_for: '%REQ(X-FORWARDED-FOR)%'
            path: /dev/stdout
        forward_client_cert_details: SANITIZE_SET
        http_filters:
        - name: istio.metadata_exchange
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                configuration:
                  '@type': type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {}
                vm_config:
                  code:
                    local:
                      inline_string: envoy.wasm.metadata_exchange
                  runtime: envoy.wasm.runtime.null
        - name: envoy.filters.http.cors
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
        - name: envoy.filters.http.fault
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
        - name: istio.stats
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                configuration:
                  '@type': type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "debug": "false",
                      "stat_prefix": "istio",
                      "disable_host_header_fallback": true,
                      "metrics": [
                        {
                          "dimensions": {
                            "source_cluster": "node.metadata['CLUSTER_ID']",
                            "destination_cluster": "upstream_peer.cluster_id"
                          }
                        }
                      ]
                    }
                root_id: stats_outbound
                vm_config:
                  code:
                    local:
                      inline_string: envoy.wasm.stats
                  runtime: envoy.wasm.runtime.null
                  vm_id: stats_outbound
        - name: envoy.filters.http.router
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        http_protocol_options: {}
        normalize_path: true
        rds:
          config_source:
            ads: {}
            resource_api_version: V3
          route_config_name: http.9889
        server_name: istio-envoy
        set_current_client_cert_details:
          cert: true
          dns: true
          subject: true
          uri: true
        stat_prefix: outbound_0.0.0.0_9889
        stream_idle_timeout: 0s
        tracing:
          client_sampling:
            value: 100
          custom_tags:
          - environment:
              default_value: latest
              name: CANONICAL_REVISION
            tag: istio.canonical_revision
          - environment:
              default_value: unknown
              name: CANONICAL_SERVICE
            tag: istio.canonical_service
          - environment:
              default_value: unknown
              name: ISTIO_META_MESH_ID
            tag: istio.mesh_id
          - environment:
              default_value: default
              name: POD_NAMESPACE
            tag: istio.namespace
          overall_sampling:
            value: 100
          random_sampling:
            value: 1
        upgrade_configs:
        - upgrade_type: websocket
        use_remote_address: true
  name: 0.0.0.0_9889
  traffic_direction: OUTBOUND
